tests/errors/vis_private_err/vis_private_err.c
#error vis_private_err.vis_private_err:8:18 The name 'privateFun' here should denote to some value; but not found.
